--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=`, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h2{
+            color:aquamarine;
+        }
+        *{
+            color: blueviolet;
+        }
+    </style>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <h1 style="color:aqua">kprcas</h1>
+    <h2>hello kprcas</h2>
+    <h3>hello kprcas</h3s>
+    <h4>hello kprcas</h4>
+    <h5>hello kprcas</h5>
+    <h6>hello kprcas</h6>
+    <p> Lorem <b>lorem</b>ipsum dolor sit amet <i>dolar</i>consectetur <u>elit</u> adipisicing elit. Debitis ducimus <q>debits</q> officia voluptates ea iusto neque consequatur repudiandae quasi laborum omnis optio quia, natus tempore<strong>ipsum</strong> praesentium veritatis a dignissimos sequi nostrum velit. Hic, quibusdam eius quidem iure repudiandae sequi dolorum. Odio quis ducimus ratione nulla quas veniam nihil odit incidunt explicabo?</p>
+<a href="https://www.instagram.com/">target=_"blank"</a>
+<a href="about.html">about</a>
+<a href="assessment1.html">assessment</a>
 </body>
 </html>
